feat: add access control for api interfaces

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -31,3 +31,9 @@ Database:
   ParseTime: True
   MaxIdleConns: 10
   MaxOpenConns: 30
+
+# JWT config
+JWT:
+  Secret: i0Ek3
+  Issuer: blogie
+  Expire: 7200
